force-app/main/default/objects/Krow__Scheduled_Klient_Survey_Recipient__c/Krow__Scheduled_Klient_Survey_Recipient__c.object-meta.xml
<CustomObject>
    <description>To store Scheduled Klient Survey Recipient Details.</description>
    <label>Scheduled Klient Survey Recipient</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Scheduler Recipients Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Klient Survey Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>