force-app/main/default/objects/Krow__Scheduled_Klient_Survey_Recipient__c/fields/Krow__AccountContactRole_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__AccountContactRole_Id__c</fullName>
    <description>to store semicolon separated AccountContactRole Ids related to Recipient.</description>
    <label>AccountContactRole Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>