force-app/main/default/objects/Krow__Scheduled_Klient_Survey_Recipient__c/fields/Krow__Contact__c.field-meta.xml
<CustomField>
    <fullName>Krow__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used to store Contact Id.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Scheduled Klient Survey Recipients</relationshipLabel>
    <relationshipName>Scheduler_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>