force-app/main/default/objects/Krow__Scheduled_Klient_Survey_Recipient__c/fields/Krow__Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Krow__Email_Address__c</fullName>
    <description>used to store Email Address.</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>