force-app/main/default/objects/Krow__Scheduled_Klient_Survey_Recipient__c/fields/Krow__Role_and_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Krow__Role_and_Recipient__c</fullName>
    <description>used to store Role and Recipient related to Contact.</description>
    <label>Role and Recipient</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>