force-app/main/default/objects/Krow__Scheduled_Klient_Survey_Recipient__c/fields/Krow__Scheduled_Klient_Survey__c.field-meta.xml
<CustomField>
    <fullName>Krow__Scheduled_Klient_Survey__c</fullName>
    <description>used to store Scheduled Klient Survey Id.</description>
    <label>Scheduled Klient Survey</label>
    <referenceTo>Krow__Scheduled_Klient_Survey__c</referenceTo>
    <relationshipLabel>Scheduled Klient Survey Recipients</relationshipLabel>
    <relationshipName>Scheduled_Klient_Survey_Recipients</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>